Ejercicios tema 3 y tema 4

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <!-- Author: Sonia Antón Llanes -->
 <!-- Created on: 25-octubre-2020 -->
-<!-- Last modification: 26-octubre-2020 -->
+<!-- Last modification: 08-diciembre-2020 -->
 <!-- Index General del Modulo Desarrollo Web Entorno Cliente -->
 
 <html lang="es">
@@ -22,13 +22,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     </head>
     <body class="container">
-	<header class="header">
-            <h1 class="h1">Desarrollo de Aplicaciones Web</h1>
-	</header>
+        <header class="header">
+                <h1 class="h1">Desarrollo de Aplicaciones Web</h1>
+        </header>
         <nav class="menu">
             <ul>
-                <a href="../index.html"><li>Inicio</li></a>
-                <a href="../proyectoDWES/indexProyectoDWES.html"><li>DWES</li></a>
+                <a href=""><li>Inicio</li></a>
+                <li>DWES</li>
                 <li class="active">DWEC</li>
                 <li>DAW</li>
                 <li>DIW</li>
@@ -40,21 +40,22 @@
             <h4>Prácticas del Módulo</h4>
             <section class="section">	
                 <a href="views/T1/index.html"><article class="article">Tema 1. Selección de arquitecturas y lenguajes de programación</article></a>
-                <a href="views/T2/index.html"><article >Tema 2. Introducción al Lenguaje JavaScript</article></a>
+                <a href="views/T2/index.html"><article class="article">Tema 2. Introducción al Lenguaje JavaScript</article></a>
+                <a href="views/T3/index.html"><article class="article">Tema 3. Utilización de objetos predefinidos</article></a>
+                <a href="views/T4/index.html"><article >Tema 4. Funciones, arrays y objetos definidos por el usuario</article></a>
                 <a href=""><article ></article></a>
-                <a href=""><article ></article></a>
-                <a href=""><article ></article></a>
+                <a href="" target="_blank"><article ></article></a>
             </section>
         </main>
-        <footer class="footer">
+	<footer class="footer">
             <nav class="fnav">
-                <ul>
+		<ul>
                     <li class="ftexto">&copy 2020-21. Sonia Anton LLanes</li>
-                    <li class="imgfooter"><a href="assets/docs/curriculum_SALL.pdf" target="_blank"><img src="assets/images/CV.png" alt="imagen_CV"></a>
-                        <a href="" target="_blank"><img src="assets/images/linkedin.png" alt="imagen_linkedIn"></a>
+                    <li><a href="assets/docs/curriculum_SALL.pdf" target="_blank"><img src="assets/images/CV.png" alt="imagen_CV"></a>
+                        <img src="assets/images/linkedin.png" alt="imagen_linkedin">
                         <a href="https://github.com/SoniaALLSauces/proyectoDWEC" target="_blank"><img src="assets/images/github.png" alt="imagen_github"></a>
                     </li>
-		</ul>
+                </ul>
             </nav>
 	</footer>         
     </body>
